--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -1,7 +1,5 @@
 zh-CN:
   datetime:
     distance_in_words:
-      about_x_hours:
-        # The defaults are "about 1 hour" and "about %{count} hours"
-        one: "1小时前"
-        other: "%{count}小时前"
+      about_x_hours: "%{count}小时前"
+      x_days: "%{count}天前"
