--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -3,3 +3,10 @@ zh-CN:
     distance_in_words:
       about_x_hours: "%{count}小时前"
       x_days: "%{count}天前"
+  views:
+    pagination:
+      first: "&laquo; 首页"
+      last: "末页 &raquo;"
+      previous: "&lsaquo; 上一页"
+      next: "下一页 &rsaquo;"
+      truncate: "..."
