--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -7,6 +7,6 @@ zh-CN:
     pagination:
       first: "&laquo; 首页"
       last: "末页 &raquo;"
-      previous: "&lsaquo; 上一页"
-      next: "下一页 &rsaquo;"
+      previous: "&laquo;"
+      next: "»"
       truncate: "..."
